<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/informacion_fragment"
            android:title="@string/quienes_somos" />
        <!--android:icon="@drawable/ic_menu_camera" -->
        <item
            android:id="@+id/fragmentDonaciones"
            android:title="@string/donaciones" />
            <!-- android:icon="@drawable/ic_menu_gallery" -->
        <item
            android:id="@+id/login"
            android:title="@string/perfil" />
            <!-- android:icon="@drawable/ic_menu_slideshow" -->
        <item
            android:id="@+id/causasFrag"
            android:title="@string/causas" />
    </group>
</menu>