<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.Informacion">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/corazon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="48dp"
                android:contentDescription="@string/content_logoSecundario"
                android:src="@drawable/corazon"
                tools:ignore="ImageContrastCheck" />

            <EditText
                android:id="@+id/subtitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="60"
                android:clickable="false"
                android:editable="false"
                android:ems="10"
                android:enabled="false"
                android:fontFamily="@font/playfair_display_bold"
                android:importantForAutofill="no"
                android:inputType="textMultiLine|textPersonName"
                android:nestedScrollingEnabled="false"
                android:singleLine="true"
                android:text="@string/titulo_Informacion"
                android:textAlignment="center"
                android:textColor="@color/grey_main"
                android:textSize="39sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Informacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/content_quienesSomos"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/infantes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/content_Imagen1"
                    android:src="@drawable/infantes" />

                <ImageView
                    android:id="@+id/logotexto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/content_logo"
                    android:scaleType="fitCenter"
                    android:scaleX=".7"
                    android:scaleY=".7"
                    android:src="@drawable/logotexto" />

            </LinearLayout>

            <ImageView
                android:id="@+id/corazon2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="48dp"
                android:background="#4A4A4A"
                android:contentDescription="@string/content_logoSecundario"
                android:src="@drawable/corazon" />

            <EditText
                android:id="@+id/subtitulo2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="60"
                android:background="#535050"
                android:backgroundTint="#4A4A4A"
                android:clickable="false"
                android:editable="false"
                android:ems="10"
                android:enabled="false"
                android:fontFamily="@font/playfair_display_bold"
                android:inputType="textMultiLine|textPersonName"
                android:nestedScrollingEnabled="false"
                android:singleLine="true"
                android:text="@string/content_informacion2"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="39sp"
                android:visibility="visible"
                android:importantForAutofill="no" />

            <ImageView
                android:id="@+id/corazon3"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="48dp"
                android:background="#FFFFFF"
                android:contentDescription="@string/content_logoSecundario"
                android:src="@drawable/corazon" />

            <EditText
                android:id="@+id/subtitulo3"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_weight="60"
                android:background="#FFFFFF"
                android:backgroundTint="#FFFFFF"
                android:clickable="false"
                android:ems="10"
                android:enabled="false"
                android:fontFamily="@font/playfair_display_bold"
                android:inputType="textMultiLine|textPersonName"
                android:nestedScrollingEnabled="false"
                android:singleLine="true"
                android:text="@string/titulo_nuestraHistoria"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="39sp"
                android:textStyle="bold"
                android:visibility="visible"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/informacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/content_informacion"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/corazon5"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="48dp"
                android:background="#FFFFFF"
                android:contentDescription="@string/content_logoSecundario"
                android:src="@drawable/corazon" />

            <EditText
                android:id="@+id/subtitulo5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="60"
                android:background="#FFFFFF"
                android:backgroundTint="#FFFFFF"
                android:clickable="false"
                android:editable="false"
                android:ems="10"
                android:enabled="false"
                android:fontFamily="@font/playfair_display_bold"
                android:inputType="textMultiLine|textPersonName"
                android:nestedScrollingEnabled="false"
                android:paddingBottom="16dp"
                android:singleLine="false"
                android:text="@string/content_informacion3"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="39sp"
                android:textStyle="bold"
                android:visibility="visible"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/editTextTextPersonName6"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:background="@color/rojo"
                android:ems="10"
                android:enabled="false"
                android:fontFamily="@font/questrial"
                android:gravity="center"
                android:inputType="textPersonName"
                android:text="@string/content_principios"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/editTextTextPersonName7"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:background="@color/rojo"
                android:ems="10"
                android:enabled="false"
                android:fontFamily="@font/questrial"
                android:gravity="center"
                android:inputType="textPersonName"
                android:text="@string/content_propositos"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/editTextTextPersonName8"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:background="@color/rojo"
                android:ems="10"
                android:enabled="false"
                android:gravity="center"
                android:inputType="textPersonName"
                android:text="@string/content_virtudes"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:importantForAutofill="no" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>